--- a/servicioclientes/pom.xml
+++ b/servicioclientes/pom.xml
@@ -9,8 +9,8 @@
 		<version>2.1.4.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.java.curso</groupId>
-	<artifactId>proyectoJava</artifactId>
+	<groupId>com.curso.serviciosmultas</groupId>
+	<artifactId>servicioclientes</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>proyectoJava</name>
 	<description>Demo project for Spring Boot</description>
@@ -39,11 +39,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
